--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
