--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
     "jsxSingleQuote": true,
-    "singleQuote": true 
+    "singleQuote": true,
+    "semi": true,
+    "printWidth": 80,
+    "trailingComma": "es5",
+    "bracketSpacing": true,
+    "tabWidth": 4,
+    "useTabs": false,
+    "endOfLine": "auto"
 }
