--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
     "name": "codebooker",
     "version": "0.1.0",
@@ -53,5 +54,13 @@
     "main": "svgr.config.js",
     "keywords": [],
     "author": "Gregory K Bowne",
-    "license": "MIT"
+    "license": "MIT",
+    "devDependencies": {
+        "eslint": "^8.45.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-react-app": "^7.0.1",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-react": "^7.33.0",
+        "prettier": "^3.0.0"
+    }
 }
