--- a/src/server/package.json
+++ b/src/server/package.json
@@ -25,6 +25,10 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "mongoose": "^7.3.4"
+        "express-session": "^1.17.3",
+        "mongoose": "^7.3.4",
+        "passport": "^0.6.0",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^8.0.0"
     }
 }
