--- a/src/server/package.json
+++ b/src/server/package.json
@@ -26,6 +26,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.3.4",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
