--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "^18.2.0",
         "react-barcode-reader": "^0.0.2",
         "react-dom": "^18.2.0",
+        "react-jwt": "^1.2.0",
         "react-router": "^6.13.0",
         "react-router-dom": "^6.13.0",
         "react-scripts": "5.0.1",
