Add mongodb and nodemailer dependencies

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -27,7 +27,9 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "jsonwebtoken": "^9.0.1",
+        "mongodb": "^5.7.0",
         "mongoose": "^7.3.4",
+        "nodemailer": "^6.9.4",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^8.0.0"
