Fixing .variable-env and Home.jsx component

--- a/src/server/.variable.env
+++ b/src/server/.variable.env
@@ -1,6 +1,2 @@
-MONGO_DB=
-<<<<<<< HEAD
-PORT=
-=======
-PORT=
->>>>>>> origin/master
+MONGO_DB=mongodb://username:password@localhost:27017/codebooker
+PORT=3001
