--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
         "axios": "^1.4.0",
+        "formik": "^2.4.3",
         "isbn-validate": "^1.0.3",
         "lodash": "^4.17.21",
         "material-ui-popup-state": "^5.0.9",
@@ -26,7 +27,8 @@
         "react-scripts": "5.0.1",
         "react-simple-star-rating": "^5.1.7",
         "styled-components": "^5.3.11",
-        "web-vitals": "^3.3.2"
+        "web-vitals": "^3.3.2",
+        "yup": "^1.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
