--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "proxy": "http://localhost:3001",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/gbowne1/codebooker.git"
