Update .variable.env example file

--- a/src/server/.variable.env
+++ b/src/server/.variable.env
@@ -1,2 +1,6 @@
 MONGO_DB=mongodb://username:password@localhost:27017/codebooker
 PORT=3001
+
+//Credentials for sending/receiving feedback from server
+MAIL_USERNAME="senderAddressEmail"
+MAIL_PASSWORD="senderAddressPassword"
