--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-react": "^7.33.0",
-        "prettier": "^3.0.0"
+        "prettier": "^3.0.0",
+        "tailwindcss": "^3.3.3"
     }
 }
