--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --transformIgnorePatterns '/(?!node_modules)/'",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
