--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
         "axios": "^1.4.0",
+        "dotenv": "^16.3.1",
         "formik": "^2.4.3",
         "isbn-validate": "^1.0.3",
         "lodash": "^4.17.21",
