--- a/package.json
+++ b/package.json
@@ -11,13 +11,25 @@
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
         "axios": "^1.4.0",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.2",
         "concurrently": "^8.2.2",
-        "dotenv": "^16.3.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.3",
+        "express-session": "^1.18.0",
         "formik": "^2.4.3",
         "isbn-validate": "^1.0.3",
+        "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
         "material-ui-popup-state": "^5.0.9",
+        "mongodb": "^6.5.0",
+        "mongoose": "^8.2.1",
+        "nodemailer": "^6.9.12",
         "nodemon": "^3.0.2",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^8.0.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-barcode-reader": "^0.0.2",
