--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@ladjs/country-language": "^1.0.3",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.5",
+        "@sozialhelden/ietf-language-tags": "^5.4.2",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
         "axios": "^1.4.0",
         "dotenv": "^16.3.1",
         "formik": "^2.4.3",
+        "i18next": "^23.7.11",
+        "i18next-browser-languagedetector": "^7.2.0",
         "isbn-validate": "^1.0.3",
         "lodash": "^4.17.21",
         "material-ui-popup-state": "^5.0.9",
@@ -21,12 +25,14 @@
         "react-barcode-reader": "^0.0.2",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
+        "react-i18next": "^14.0.0",
         "react-jwt": "^1.2.0",
         "react-modal": "^3.16.1",
         "react-router": "^6.13.0",
         "react-router-dom": "^6.13.0",
         "react-scripts": "5.0.1",
         "react-simple-star-rating": "^5.1.7",
+        "recoil": "^0.7.7",
         "styled-components": "^5.3.11",
         "web-vitals": "^3.3.2",
         "yup": "^1.2.0"
